--- a/style/about.css
+++ b/style/about.css
@@ -21,7 +21,7 @@ h2{
     height: 100%;
 }
 footer{
-    background-color: #6B6B6B;
+    background-color: #D1D1D1;
     padding-top: 64px;
     padding-bottom: 64px;
     display: flex;
@@ -40,6 +40,14 @@ h4{
 }
 .footer-info{
     width: 40%;
+}
+.footer-top{
+    margin-bottom: 24px;
+}
+.footer-top a{
+    font-size: 24px;
+    margin-left: 24px;
+    margin-right: 24px;
 }
 .footer-media a {
     height: 32px;
@@ -89,6 +97,10 @@ h4{
     }
     .footer-nav{
         padding-left: 8px;
+    }
+    .footer-top a{
+        margin-right: 8px;
+        margin-left: 8px;
     }
     .footer-media a{
         margin-right: 4px;
