--- a/style/add.css
+++ b/style/add.css
@@ -49,6 +49,11 @@ body{
 .m{
     margin-top: 64px;
 }
+.video-bg{
+    width: 40vw;
+    background-size: cover;
+    border-radius: 8px;
+}
 @media screen and (max-width:660px){
     h2{
         margin-left: 5vw;
@@ -80,5 +85,10 @@ body{
         width: 90vw;
         padding-left: 0;
         padding-top: 16px;
+    }
+    .video-bg{
+        width: 90vw;
+        aspect-ratio: 2/1;
+        order: -1;
     }
 } 
