--- a/style/service.css
+++ b/style/service.css
@@ -1,16 +1,20 @@
 .sub-card{
-    background-color: aliceblue;
-    width: 35vw;
-    margin-left: 10vw;
+    background-color: rgb(255, 255, 255);
+    width: 50vw;
+    margin-left: 25vw;
     margin-bottom: 32px;
     border-radius: 8px;
     padding-bottom: 32px;
     display: inline-block;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+/* text wrape balence */
+.service-heading{
+    text-wrap: balance;
+}
 .card-title{
     padding: 16px;
-    background-color: rgb(61, 128, 70);
+
     border-radius: 8px 8px 0 0;
     color: white;
 }
@@ -27,13 +31,12 @@
     border-bottom: none; 
 }
 .card-pay{
-    display: flex;
-    justify-content: space-between;
-    padding: 16px;
+    padding: 32px;
     align-items: center;
 }
 .our-service{
     padding: 16px 48px;
+    width: 100%;
 }
 small{
     font-size: 12px;
